--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.14
   sqlite3_flutter_libs: ^0.5.13
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.5.0
 
 dev_dependencies:
   flutter_test:
