--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.13
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.5.0
+  hooks_riverpod: ^2.3.2
+  riverpod_generator: ^2.1.4
+  riverpod_annotation: ^2.0.2
 
 dev_dependencies:
   flutter_test:
