--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^6.5.0
-  intl: any
+  intl: ^0.18.0
   drift: ^2.6.0
   path: ^1.8.2
   path_provider: ^2.0.14
   sqlite3_flutter_libs: ^0.5.13
-  flutter_form_builder: ^7.7.0
-  form_builder_validators: ^8.5.0
+  flutter_form_builder: ^9.0.0
+  form_builder_validators: ^9.0.0
   hooks_riverpod: ^2.3.2
   riverpod_generator: ^2.1.4
   riverpod_annotation: ^2.0.2
