--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ dependencies:
   flutter_form_builder: ^9.0.0
   form_builder_validators: ^9.0.0
   hooks_riverpod: ^2.3.2
-  riverpod_generator: ^2.1.4
+  riverpod_generator: ^2.2.3
   riverpod_annotation: ^2.0.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   drift_dev: ^2.6.0
+  freezed: ^2.3.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
