--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   riverpod_generator: ^2.2.3
   riverpod_annotation: ^2.0.2
   freezed_annotation: ^2.2.0
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
