--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   riverpod_annotation: ^2.0.2
   freezed_annotation: ^2.2.0
   font_awesome_flutter: ^10.4.0
+  slang: ^3.20.0
+  slang_flutter: ^3.20.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +65,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   drift_dev: ^2.6.0
   freezed: ^2.3.5
+  slang_build_runner: ^3.20.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
