--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dev_dependencies:
   drift_dev: ^2.6.0
   freezed: ^2.3.5
   slang_build_runner: ^3.20.0
+  build_config: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
