--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: "^3.1.5"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,10 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^6.5.0
   intl: ^0.18.0
-  drift: ^2.6.0
   path: ^1.8.2
   path_provider: ^2.0.14
-  sqlite3_flutter_libs: ^0.5.13
   flutter_form_builder: ^9.0.0
   form_builder_validators: ^9.0.0
   hooks_riverpod: ^2.3.2
@@ -51,6 +49,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   slang: ^3.20.0
   slang_flutter: ^3.20.0
+  realm: ^1.3.0
 
 dev_dependencies:
   flutter_test:
