--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   slang: ^3.20.0
   slang_flutter: ^3.20.0
   realm: ^1.3.0
+  flutter_hooks: ^0.20.3
 
 dev_dependencies:
   flutter_test:
