--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   slang_flutter: ^3.20.0
   realm: ^1.3.0
   flutter_hooks: ^0.20.3
+  image_cropper: ^5.0.1
+  image_picker: ^1.0.6
 
 dev_dependencies:
   flutter_test:
