--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   go_router: ^6.5.0
   intl: ^0.18.0
   path: ^1.8.2
-  path_provider: ^2.0.14
+  path_provider: ^2.1.1
   flutter_form_builder: ^9.0.0
   form_builder_validators: ^9.0.0
   hooks_riverpod: ^2.3.2
@@ -53,6 +53,8 @@ dependencies:
   flutter_hooks: ^0.20.3
   image_cropper: ^5.0.1
   image_picker: ^1.0.6
+  camera: ^0.10.5+8
+  image: ^4.1.3
 
 dev_dependencies:
   flutter_test:
