--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.0.6
   camera: ^0.10.5+8
   image: ^4.1.3
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
