--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   camera: ^0.10.5+8
   image: ^4.1.3
   fluttertoast: ^8.2.4
+  reorderable_grid_view: ^2.2.6
 
 dev_dependencies:
   flutter_test:
