--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.turn1checker">
+    package="com.dairi.turn1checker">
    <application
         android:label="turn1checker"
         android:name="${applicationName}"
