--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
         <activity
     android:name="com.yalantis.ucrop.UCropActivity"
@@ -35,4 +36,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+          <uses-permission android:name="com.android.vending.BILLING" />
+
 </manifest>
