--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   reorderable_grid_view: ^2.2.6
   purchases_flutter: ^6.29.2
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
