--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+**/android/app/src/main/AndroidManifest.xml
 
 # Symbolication related
 app.*.symbols
@@ -45,3 +46,4 @@ app.*.map.json
 
 # flutter_dotenv
 *.env
+
