--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ app.*.map.json
 *.env
 
 /android/app/src/main/AndroidManifest.xml
+android/app/src/main/AndroidManifest.xml
+ios/Runner/Info.plist
