--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   purchases_flutter: ^6.29.2
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.2.3
+  google_mobile_ads: ^4.0.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
