--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   shared_preferences: ^2.2.3
   google_mobile_ads: ^4.0.0
   url_launcher: ^6.2.4
+  rate_my_app: ^2.0.0
 
 dev_dependencies:
   flutter_test:
