--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   google_mobile_ads: ^4.0.0
   url_launcher: ^6.2.4
   rate_my_app: ^2.0.0
+  flutter_native_splash: ^2.3.7
 
 dev_dependencies:
   flutter_test:
@@ -128,3 +129,14 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/app_icon.png"
+
+flutter_native_splash:
+  color: "#233544"
+  image: "assets/images/splash.png"
+  android: true
+  ios: true
+  web: false
+  fullscreen: true
+  android_12:
+    icon_background_color: "#233544"
+    image: "assets/images/splash_android12.png"
