--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,8 @@ app.*.map.json
 /android/app/src/main/AndroidManifest.xml
 android/app/src/main/AndroidManifest.xml
 ios/Runner/Info.plist
-.firebase.json
-.firebase_options.dart
-.google-services.json
-.GoogleService-Info.plist
+/firebase.json
+/lib/firebase_options.dart
+google-services.json
+GoogleService-Info.plist
 
