--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.3+6
 
 environment:
-  sdk: ">=3.1.5 <3.1.8"
+  sdk: ">=3.1.5 <3.6.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,11 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^6.5.0
-  intl: ^0.18.0
+  intl: ^0.19.0
   path: ^1.8.2
   path_provider: ^2.1.1
   flutter_form_builder: ^9.0.0
-  form_builder_validators: ^9.0.0
+  form_builder_validators: ^11.0.0
   hooks_riverpod: ^2.3.2
   riverpod_generator: ^2.2.3
   riverpod_annotation: ^2.0.2
@@ -63,6 +63,8 @@ dependencies:
   url_launcher: ^6.2.4
   rate_my_app: ^2.0.0
   flutter_native_splash: ^2.3.7
+  firebase_core: ^2.24.2
+  firebase_analytics: ^10.8.0
 
 dev_dependencies:
   flutter_test:
